# magic

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  devices.txt  libs.txt
.cargo.tmp/: config
data/kernels/: matvec.cl  scalar.cl  vector.cl
hackrf/: Cargo.toml  Makefile
hackrf-sys/: Cargo.toml
hackrf-sys/src/: lib.rs
hackrf/examples/: rx_stream.rs
hackrf/src/: lib.rs  main.rs  wrapper.rs
hackrf/src/command/: info.rs  list.rs  reset.rs
hackrf/src/shared/: mod.rs
magic-sense/app/: build.gradle  proguard-rules.pro
magic-sense/app/src/androidTest/java/com/korczis/magicsense/: ExampleInstrumentedTest.java
magic-sense/app/src/main/: AndroidManifest.xml
magic-sense/app/src/main/java/com/korczis/magicsense/: MainActivity.java
magic-sense/app/src/main/res/layout/: activity_main.xml
magic-sense/app/src/main/res/values/: strings.xml
magic-sense/app/src/test/java/com/korczis/magicsense/: ExampleUnitTest.java
magic-sense/gradle/wrapper/: gradle-wrapper.properties
math-elixir/: README.md  mix.exs
math-elixir/lib/: math.ex
math-rust/: Cargo.toml
math-rust/src/: lib.rs  main.rs
math-rust/src/core/: vector.rs
math-rust/src/cpu/: mod.rs
math-rust/src/generic/: mod.rs
math-rust/src/ocl/: mod.rs
math-rust/src/opencl/: mod.rs
math-rustler/: .gitignore  Cargo.toml  Cargo.toml.old  README.md  mix.exs
math-rustler/lib/: sdr_test.ex
math-rustler/lib/sdr/: native.ex
math-rustler/native/math/: Cargo.toml
math-rustler/native/math/src/: lib.rs
math-rustler/test/: sdr_test.exs
math/src/: main.rs  options.rs
playground-rust/: Cargo.toml
playground-rust/src/: main.rs
rtl/: Cargo.toml
rtl-sys/: Cargo.toml
rtl-sys/src/: build.rs  lib.rs
rtl/src/: lib.rs  main.rs  wrapper.rs
rtl/src/command/: info.rs  list.rs  mod.rs  reset.rs
sdr/: Cargo.toml
sdr-elixir/: README.md  mix.exs
sdr-elixir/config/: config.exs
sdr-elixir/test/: sdr_test.exs
sdr-rustler/: .gitignore  .travis.yml  Cargo.toml  README.md  mix.exs
sdr-rustler/config/: config.exs
sdr-rustler/lib/: rustler_test.ex  sdr_test.ex
sdr-rustler/lib/sdr/: native.ex
sdr-rustler/native/sdr/: Cargo.toml
sdr-rustler/native/sdr/src/: lib.rs
sdr-rustler/src/: lib.rs
sdr-rustler/test/: sdr_test.exs
sdr-shared/: Cargo.toml
sdr-shared/src/: lib.rs
sdr-web/: .editorconfig  .gitignore  README.md  elm-package.json  mix.exs  package-lock.json  package.json
sdr-web/config/: config.exs  dev.exs  prod.exs  test.exs
sdr-web/lib/: sdr_web.ex
sdr-web/lib/sdr_web/: endpoint.ex
sdr-web/lib/sdr_web/math/: math.ex
sdr-web/priv/static/js/: app.js
sdr-web/test/controllers/: page_controller_test.exs
sdr-web/test/support/: channel_case.ex  conn_case.ex
sdr-web/test/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
sdr-web/web/: gettext.ex  router.ex  web.ex
sdr-web/web/channels/: user_socket.ex
sdr-web/web/controllers/: page_controller.ex
sdr-web/web/controllers/api/v1/: math_controller.ex  news_controller.ex  sdr_controller.ex
sdr-web/web/elm/: Application.elm  Assets.elm  Main.elm  Model.elm  Msg.elm  Page.elm  Route.elm
sdr-web/web/elm/Data/: User.elm
sdr-web/web/elm/Page/: Home.elm  Map.elm  Radio.elm
sdr-web/web/elm/Views/: Page.elm
sdr-web/web/static/js/: app.js
sdr-web/web/templates/layout/: app.html.eex
sdr-web/web/views/: error_helpers.ex  error_view.ex  layout_view.ex  page_view.ex
sdr-web/webpack/: webpack.config.js
