[package]
name = "hackrf"
version = "0.0.1"
authors = ["Tomas Korcak <korczis@gmail.com>"]

description = "HackRF wrapper"

# These URLs point to more information about the repository.
documentation = "https://docs.rs/gauc/"
homepage = "https://github.com/korczis/gauc"
repository = "https://github.com/korczis/gauc"

# This points to a file in the repository (relative to this `Cargo.toml`). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["hackrf"]

license = "MIT"

[dependencies]
clap = ">= 2.18"
env_logger = ">= 0.4"
hackrf-sys = { path = "../hackrf-sys" }
libc = ">= 0.2.16"
log = ">= 0.3.6"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"

[lib]
name = "hackrf"
path = "src/lib.rs"

[[bin]]
name = "hackrf"
doc = false
path = "src/main.rs"

# Debug settings
[profile.dev]
opt-level = 0      # controls the `--opt-level` the compiler builds with
debug = true       # controls whether the compiler passes `-g`
rpath = false      # controls whether the compiler passes `-C rpath`
lto = false        # controls `-C lto` for binaries and staticlibs
debug-assertions = true # controls whether debug assertions are enabled
codegen-units = 1  # controls whether the compiler passes `-C codegen-units`
                   # `codegen-units` is ignored when `lto = true`
panic = 'unwind'   # panic strategy (`-C panic=...`), can also be 'abort'

# Release settings
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
