[package]
name = "sdr-rtl-sys"
version = "0.1.0"
authors = ["Tomas Korcak <korczis@gmail.com>"]

description = "RTL SDR wrapper"

# These URLs point to more information about the repository.
documentation = "https://docs.rs/sdr-rust/"
homepage = "https://github.com/korczis/sdr-rust"
repository = "https://github.com/korczis/sdr-rust"

# This points to a file in the repository (relative to this `Cargo.toml`). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["rtl", "rtl-sdr", "sdr"]

license = "MIT"

build = "src/build.rs"

[dependencies]
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"

[lib]
name = "sdr_rtl_sys"
path = "src/lib.rs"
