[package]
name = "sdr_rtl"
version = "0.1.0"
authors = ["Tomas Korcak <korczis@gmail.com>"]

description = "RTL SDR wrapper"

# These URLs point to more information about the repository.
documentation = "https://docs.rs/sdr-rust/"
homepage = "https://github.com/korczis/sdr-rust"
repository = "https://github.com/korczis/sdr-rust"

# This points to a file in the repository (relative to this `Cargo.toml`). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["rtl", "rtl-sdr", "sdr"]

license = "MIT"

[dependencies]
afl = ">= 0.1.5"
clap = ">= 2.18"
env_logger = ">= 0.4"
sdr-rtl-sys = { path = "../rtl-sys"}
libc = ">= 0.2"
log = ">= 0.3"
quickcheck = ">= 0.4"
protobuf = "1.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[lib]
name = "sdr_rtl"
path = "src/lib.rs"

[[bin]]
name = "sdr_rtl"
doc = false
path = "src/main.rs"

